Fixing share button visibility

--- a/Webclient/src/app/module/pve/module/ranking/component/ranking/ranking.scss
+++ b/Webclient/src/app/module/pve/module/ranking/component/ranking/ranking.scss
@@ -12,7 +12,7 @@
     border: 1px solid $tdc_accent;
     border-bottom: none;
 
-    #share_button {
+    #rpll_share_button {
         display: block;
         width: 34px;
         height: 34px;
