--- a/Webclient/src/app/template/table/component/table/table.scss
+++ b/Webclient/src/app/template/table/component/table/table.scss
@@ -15,7 +15,7 @@
         right: 3px;
     }
 
-    #share_button{
+    #rpll_share_button{
         position: absolute;
         height: 25px;
         width: 25px;
